1 - Integrated solver normal and error outputstream in one single channel 2 - Added division operator 3 - Added division operator tests 4 - Modified some variables to final 5 - Changed prefs file
git-svn-id: svn://svn.code.sf.net/p/rodin-b-sharp/svn/trunk@11267 1434b563-b632-4741-aa49-43a3a8374d2e